--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react-dom": "^18.2.0",
     "serve": "^14.2.0",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "playwright": "^1.43.1"
   }
 }
