--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ packaging==24.0
 pillow==10.3.0
 pluggy==1.5.0
 pytest==8.2.0
+python-dotenv==1.0.1
 scipy==1.13.0
 svgpathtools==1.6.1
 svgwrite==1.4.3
